Added watchers + Due Date